# The-Blind-Necromancer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TheBlindNecromancer.sln
NecroClient/: NecroClient.cpp  NecroClient.vcxproj  NecroClient.vcxproj.filters
NecroCore/: Actor.h  AttackResult.h  CastResult.h  Command.cpp  Command.h  CommandSerialization.h  Entity.h  EnvironmentSystem.cpp  EnvironmentSystem.h  FireSpell.cpp  Game.cpp  Game.h  HostileAISystem.cpp  HostileAISystem.h  Map.cpp  Map.h  MoveResult.h  NecroCore.cpp  NecroCore.vcxproj  NecroCore.vcxproj.filters  Pathfinding.cpp  Pathfinding.h  Player.h  PulseResult.h  Spell.cpp  Spell.h  Status.h  SummonCommandResult.h  SummonResult.h  SummonsAISystem.cpp  SummonsAISystem.h  WaterSpell.cpp
NecroCore.Tests/: AttackTest.cpp  CommandTest.cpp  ElementalTest.cpp  EnvironmentTest.cpp  Fireplace.cpp  GameTest.cpp  MoveTest.cpp  NecroCore.Tests.vcxproj  NecroCore.Tests.vcxproj.filters  PathfindingTest.cpp  PlayerTest.cpp  PulseTest.cpp  Spells.cpp  SummonCommandTest.cpp  SummonTest.cpp  TrapTest.cpp  TurnTest.cpp
